# milkdrop-extension

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  PLAN.md  QUESTIONS.md  README.md  REFACTOR_CHECKLIST.md  debug_test.js  errors.txt  justfile  meson.build
.github/workflows/: test.yml
docs/: architecture.md  debug-log.md  development.md  extension-benchmark.md  freeze-investigation.md  gnome-doc-findings.md  hanabi-learnings.md  milkdrop-expression-spec.md  parity-validation-progress.md  pipewire-audio-source-research.md  projectm-api.md  projectm-parity.md  v2-architecture-spikes.md  window-and-display-map.md
docs/reference-codebases/: README.md
presets/se7enslasher-2025/: 02_MW_new03T3d (Se7enSlasher's Edit).json  02_MW_new03T4a (Se7enSlasher's Edit).json  02_MW_new03T4b (Se7enSlasher's Edit).json  Aderrasi + Se7enSlasher - Potion of Spirits (rand texture moebius beat mix) (Update 2024).json  Aderrasi + Se7enSlasher - Potion of Spirits (rand texture moebius beat mix).json  Anandamide - Bee_Back_To_Bassics (Se7enSlasher's Composition Fix).json  Anandamide - Bee_Back_To_Bassics - rand tex (Se7enSlasher's Composition Fix).json  Anandamide - Capitalist_Cathedral_Esper (Se7enSlasher's Composition Fix).json  Andy + Se7enSlasher - Digital Rebel (Ruby Gillman Trippy Beats_CodeFX_LaserEyesSupernova Mix).json  BigWings + IkeC + MilkDrop2077 + Se7enSlasher - Heartless3 (Invertless Edit).json  BigWings + IkeC + MilkDrop2077 + Se7enSlasher - Heartless3 (Random Texture Edit + Invertless Edit).json  BigWings + IkeC + MilkDrop2077 + Se7enSlasher - Heartless3 (Random Texture Edit).json  BigWings + IkeC + Se7enSlasher - Heartfelt (Music Reactive Edit).json  BigWings + IkeC + Se7enSlasher - Heartfelt (Random Texture + Music Reactive Edit).json  BigWings + IkeC + Se7enSlasher - Heartfelt (Random Texture Edit).json  Cope + Se7enSlasher - fractal explorer 115 (random texture mix).json  Cope + Se7enSlasher - julia set (looking glass mix) (Random Texture Edit).json  Cynos + Se7enSlasher - Glowing Viscous Sustance (Reflected Random Texture Mix).json  DeepSeek + Se7enSlasher - Colorful Ripple Wave.json  EVET + martin + Se7enSlasher - Cathedral Gates (rotated random texture edit).json  EVET - martin - Se7enSlasher - Severe Fluxx on a Random Texture.json  Eo.S. + Geiss + Se7enSlasher - glowsticks v2 04 music minimal (Fee Violetta Liquid Reactive Mix).json  Eo.S. + Geiss + Se7enSlasher - glowsticks v2 04 music minimal (liquid copper sense rand tex mix).json  EvilJim - Ice Drops (Se7enSlasher's darken center off edit).json  Fishbrain + Krash - Witchcraft (shifting parchment) - mash0002 - possessed parchment, goats for mosaic pagan (random texture edit).json  Flexi + Geiss + Se7enSlasher - antagonizing beat detection codes (random texture + Reactive Blur Mix).json  Flexi + Se7enSlasher - Milkdrop 3D hack [random tex edit].json  Flexi + Se7enSlasher - black holes [sucking fractals for lunch] [rand tex edit].json  Flexi + Se7enSlasher - fractal remix rand tex.json  Geiss + Se7enSlasher - Blur Mix 3 (Zylot's Earthquake Wave Mod).json  Geiss + Se7enSlasher - Drempels (Let Op!) (full random texture mix).json  Geiss + Se7enSlasher - Game of Life (reactive random texture mix).json  Geiss + Se7enSlasher - High Dynamic Range (Lights in Smoke Shader Remix) (Update 2024).json  Geiss + Se7enSlasher - High Dynamic Range (Lights in Smoke Shader Remix).json  Geiss + Se7enSlasher - Mega Swirl 3 (color dodge random texture composite mix).json  Geiss + Se7enSlasher - Tokamak Plus 2 (random textured).json  Geiss - Drop Shadow 2 (Se7enSlasher's full random texture mix).json  GreatWho + Se7enSlasher - Lasershow (Spooky's Dancing Inverted Spider Web Edit) (Update 2024).json  GreatWho + Se7enSlasher - Lasershow (Spooky's Dancing Inverted Spider Web Edit).json  Hexcollie - Hexcollie actually tryin funky version (Se7enSlasher's per-vertex fix).json  (+454 more)
src/extension/: audio.js  evaluator.js  extension.js  frame-state.js  gnomeShellOverride.js  ipc.js  metadata.json.in  milk-parser.js  monitor.js  mpris-watcher.js  perf.js  prefs.js  preset-crash-quarantine.js  preset-loader-process.js  preset-probe-policy.js  presets.js  wallpaper.js  windowTitle.js
src/renderer/: gl-bridge.js  gl-helper.c  glarea.js  ipc-client.js  mesh.js  milkdrop-gl-helper  renderer.js  shaders.js  vertex-eval.js
tests/: run-parity.js  run.js  visual-compliance.js  visual-expr.js
tools/: check-mpris.js  generate-golden-frames.js  install-reload.sh  install.sh  nested.sh  reload.sh  uninstall.sh  watch.sh
(+88 files in other folders)
